# nushell-binary-engine

./: Cargo.toml  README.md  flake.nix
nix/modules/: devshell.nix  pre-commit.nix  rust.nix
